<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_expenses" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_projects" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/nav_reports" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
